force/src/objects/DividedVote__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>候補者</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>直接投票</relationshipLabel>
        <relationshipName>DirectVotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proxy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>委任先</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>委任投票</relationshipLabel>
        <relationshipName>ProxyVotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vote__c</fullName>
        <label>投票</label>
        <referenceTo>Vote__c</referenceTo>
        <relationshipName>Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>重み</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>分割投票</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ProxyOrCandidateCheck</fullName>
        <active>true</active>
        <errorConditionFormula>( ISBLANK( Proxy__c ) &amp;&amp; ISBLANK( Candidate__c ) ) 
||
NOT ( ISBLANK( Proxy__c ) || ISBLANK( Candidate__c ) )</errorConditionFormula>
        <errorMessage>候補者あるいは委任先のいずれか一方のみを必ず指定する必要があります。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WeightRangeCheck</fullName>
        <active>true</active>
        <errorConditionFormula>Weight__c &lt; 0.0 || Weight__c &gt; 1.0</errorConditionFormula>
        <errorMessage>重みは0%以上100%以下である必要があります。</errorMessage>
    </validationRules>
</CustomObject>